--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -36,14 +36,14 @@
           <div>
             <div id="image-list-container">
               <ul class="media-list">
-                <li class="media" *ngFor="let image of images">
-                  <div class="media-left" *ngIf="thumbnails[image.key] != null">
-                    <a (click)="previewImage($event, image)">
-                      <img class="image-thumbnail" [src]="thumbnails[image.key] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+                <li class="media" *ngFor="let item of items">
+                  <div class="media-left" *ngIf="thumbnails[item.key] != null">
+                    <a (click)="previewImage($event, item)">
+                      <img class="item-thumbnail" [src]="thumbnails[item.key] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
                     </a>
                   </div>
                   <div class="media-body">
-                    <h4 class="media-heading">{{image.name}}</h4>
+                    <h4 class="media-heading">{{item.name}}</h4>
                   </div>
                 </li>
               </ul>
@@ -54,7 +54,7 @@
     </div>
     <div class="btn-holder" style="text-align: right;">
       <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-      <button (click)="handleRunOrtho()" class="btn btn-primary pull-right">Reprocess imagery</button>    
+      <button *ngIf="processable" (click)="handleRunOrtho()" class="btn btn-primary pull-right">Reprocess imagery</button>    
     </div>
     
     <div class="row">
