--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -95,16 +95,16 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
 
-<!-- 
-      <div *ngFor="let selection of selections" class="form-group">
-        <label [for]="selection.type">{{selection.type}}:</label>
+      <div *ngFor="let p of pages" class="form-group">
+        <div *ngIf="p.type === 'CATEGORY'">
+          <label [for]="p.selection.type">{{p.selection.type}}:</label>
 
-        <select [name]="selection.type" (change)="onSelect(selection)" [(ngModel)]="selection.value" required>
-          <option></option>
-          <option *ngFor="let option of options[selection.type]" [value]="option.id">{{option.name}}</option>
-        </select>
+          <select [name]="p.selection.type" [(ngModel)]="p.selection.value" disabled required>
+            <option></option>
+            <option *ngFor="let option of p.options" [value]="option.id">{{option.name}}</option>
+          </select>
+        </div>
        </div>
- -->                    
 
         <div class="form-group">
           <label for="outFileName">Output File Name Prefix:</label>
