--- a/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
+++ b/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
@@ -6,7 +6,7 @@
   /* 
 
   Color Pallette
-    #7C868D - Green
+    #6BA53A - Green
     #7C868D - Dark  grey/blue
     #D7BD0C - Yellow
     #007276 - Turquis
