--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -2,35 +2,46 @@
     <uasdm-header [title]="'Site Viewer'"></uasdm-header>
 </div>
 
-<div id="app-container" class="container-fluid">
+<div id="app-container" class="container-fluid" style="background: #f7f7f7;">
 
     <div class="row">
         <div class="col-md-3 lw-inner-col" id="location-explorer-list" style="overflow: visible;">
-            <form class="submit-form">
-                <div class="row">
-                    <div class="col-md-8">
-                      <ul class="breadcrumb">
-                          <li>
-                            <a (click)="back(null)">UAS Sites</a>
-                          </li>
-                          <li *ngFor="let entity of previous; last as isLast" [ngClass]="{'active':isLast}">
-                            <a *ngIf="!isLast" (click)="back(entity)"> {{entity.name}}</a>
-                            <span *ngIf="isLast"> {{entity.name}}</span>
-                          </li>
-                      </ul>                    
+            <form class="submit-form" style="background: white;">
+
+                <!-- IF at Site level -->
+                <div class="row" *ngIf="admin && !current">
+                    <div class="col-md-6">
+                        <h3>UAS Sites</h3>
                     </div>
-                    <div class="col-md-4" *ngIf="admin">
+                    <div class="col-md-6">
                         <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new site</button>
                         <!-- 
                         <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
-               -->
-
+                        -->
                     </div>
                 </div>
+
+                <!-- IF lower than Site -->
+                <div class="row" *ngIf="current">
+                    <div class="col-md-12" >
+                      <ul class="breadcrumb">
+                          <li>
+                            <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
+                            <a (click)="back(null)" style="color: #6BA53A;">UAS Sites</a>
+                          </li>
+                          <li *ngFor="let entity of previous; last as isLast" [ngClass]="{'active':isLast}">
+                            <a *ngIf="!isLast" (click)="back(entity)" style="color: #6BA53A;"> {{entity.name}}</a>
+                            <span *ngIf="isLast"> <b>{{entity.name}}</b> </span>
+                          </li>
+                      </ul>                    
+                    </div>
+                </div>
+
+                <!-- Search bar -->
                 <div class="row">
                     <div class="col-md-12">
                         <div class="location-management-widget-section">
-                            <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+                            <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
                         </div>
                     </div>
                 </div>                
@@ -38,14 +49,16 @@
 
             <!-- <hr> -->
 
-            <div class="row">
-                <div class="col-md-12">
+            <div class="row" style="height: calc(100vh - 228px);">
+                <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
+                  
                   <tabset>
                     <tab heading="Data">                
                       <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container">
                         <div class="list-group">
-                          <div  *ngFor="let node of nodes" class="list-group-item">
-                            <a (click)="select(node, $event)">
+
+                          <div *ngFor="let node of nodes" class="list-group-item">
+                            <!-- <a (click)="select(node, $event)">
                               {{node.name}}
                             </a>
                             <span *ngIf="node.type !== 'folder'" class="pull-right button-column">
@@ -62,32 +75,107 @@
                                   <a class="fa fa-trash-o ico-remove" (click)="handleDelete(child)" title="Delete"></a>                                   
                                 </span>                                 
                               </div>
+                            </div> -->
+
+
+                            <!-- Two column layout -->
+                            <div class="card card-default" *ngIf="getMetadata(node).root" (click)="select(node, $event)">
+                              <!-- <div class="card-header">Header</div> -->
+                              <div class="card-body card-5-7">
+                                <div class="card-left">
+                                  <img src="https://via.placeholder.com/75x75" class="img-responsive">
+                                </div>
+                                <div class="card-right">
+                                  <h4>
+                                    <!-- <a (click)="select(node, $event)"> -->
+                                      {{node.name}}
+                                    <!-- </a> -->
+                                  </h4>
+                                  <span *ngIf="node.type !== 'folder'" class="pull-right button-column" style="top: 0;position: absolute;right: 0;">
+                                    <a class="fa fa-pencil ico-edit" (click)="handleEdit(node, $event)" title="Edit"></a>
+                                    <a class="fa fa-trash-o ico-remove" (click)="handleDelete(node, $event)" title="Delete"></a>                                   
+                                  </span>  
+                                  <p><b>7</b> TODO: child node count</p>
+                                </div>
+                              </div>
+                              <!-- <div class="card-footer">Footer</div> -->
                             </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div *ngIf="supportingData.length > 0" class="location-management-widget-section location-management-list-container">
-                        <label>Supporting Data</label>
-                        <div class="list-group">
+
+
+                            <!-- Single column card -->
+                            <div class="card card-default" *ngIf="!getMetadata(node).root" (click)="select(node, $event)">
+                              <div class="card-body">
+                                  <i (click)="handleExpand(node, $event)" class="fa fa-expand pull-right" aria-hidden="true"></i>
+
+                                  <h4>{{node.name}}</h4>
+                                  <p><b>1</b> TODO: child node count</p>
+                                  
+                                  <div *ngIf="node.active" class="list-group" >
+                                    <div *ngFor="let child of node.children" (click)="select(child, $event)" class="list-group-item" style="background-color: #ececec;border: solid 1px lightgrey;border-radius: 0;">
+                                      <!-- <a (click)="select(child, $event)"> -->
+                                        {{child.name}}
+                                      <!-- </a> -->
+                                      <span *ngIf="child.type !== 'folder'" class="pull-right button-column">
+                                        <a class="fa fa-pencil ico-edit" (click)="handleEdit(child, $event)" title="Edit"></a>
+                                        <a class="fa fa-trash-o ico-remove" (click)="handleDelete(child, $event)" title="Delete"></a>                                   
+                                      </span>                                 
+                                    </div>
+                                  </div>
+                              </div>
+                            </div>
+
+                          </div> 
+
                           <div *ngFor="let node of supportingData" class="list-group-item">
-                            <a (click)="select(node, $event)">
-                              {{node.name}}
-                            </a>
-                          </div>
+                          <div class="card card-default">
+                              <div class="card-body">
+                                <h4>Supporting Data</h4>
+                                <div class="list-group">
+                                  <div class="list-group-item" style="background-color: #ececec;border: solid 1px lightgrey;border-radius: 0;">
+                                    <a (click)="select(node, $event)">
+                                      {{node.name}}
+                                    </a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            </div>
+
                         </div>
                       </div>
+                      <!-- <div *ngIf="supportingData.length > 0" class="location-management-widget-section location-management-list-container">
+                        
+                            <div class="card card-default">
+                              <div class="card-body">
+                                <h4>Supporting Data</h4>
+                                <div class="list-group">
+                                  <div *ngFor="let node of supportingData" class="list-group-item" style="background-color: #ececec;border: solid 1px lightgrey;border-radius: 0;">
+                                    <a (click)="select(node, $event)">
+                                      {{node.name}}
+                                    </a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                      </div> -->
+
                     </tab>
                     <tab *ngIf="current != null" heading="Products">                
                     </tab>
                   </tabset>
+
                 </div>
             </div>
             
-            <div *ngIf="current != null" class="row">
-              <div class="col-md-12">
-                <button (click)="handleUploadFile()" class="btn btn-primary">Upload</button>              
+
+
+            <footer class="sidebar-footer" style="" *ngIf="current != null">
+              <div class="row" *ngIf="current != null">
+                <div class="col-md-12" style="text-align: center;padding: 10px;">
+                  <button (click)="handleUploadFile()" class="btn btn-primary">Upload</button>              
+                </div>
               </div>
-            </div>
+            </footer>
             
         </div>
         <div class="col-md-9" id="site-explorer-map">
