Fixed bug with creating, deleting, create a type in a single transaction Fixed bug when trying to delete a collections which has an upload event associated against it.

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -198,7 +198,7 @@
       <div class="col-md-8">
         <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix" style="padding:0; margin-top:20px;">
           <div class="ui-dialog-buttonset" >
-            <button type="button" [disabled]="disabled" (click)="close()" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
+            <button type="button" [disabled]="disabled" (click)="close()" [disabled]="disabled" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
               <span class="ui-button-text">Close</span>
             </button>
 
