https://terraframe.atlassian.net/browse/OU-228

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/image-preview-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/image-preview-modal.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="image != null" class="modal-body">
+<div class="modal-body">
     <div *ngIf="message != null" class="error-container">
         <div class="label-holder">
             <strong>Error</strong>
