--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -160,7 +160,8 @@
                       </div> -->
 
                     </tab>
-                    <tab *ngIf="current != null" heading="Products">                
+                    <tab *ngIf="current != null" heading="Products">
+                      <product-panel [id]="current.id" (toggleMapImage)="handleMapImage($event)"></product-panel>           
                     </tab>
                   </tabset>
 
