https://terraframe.atlassian.net/browse/OU-228

--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -161,7 +161,7 @@
 
                     </tab>
                     <tab *ngIf="current != null" heading="Products">
-                      <product-panel [id]="current.id" (toggleMapImage)="handleMapImage($event)"></product-panel>           
+                      <product-panel [id]="current.id" (toggleMapImage)="handleMapImage($event)" (gotoSite)="handleGotoSite($event)"></product-panel>           
                     </tab>
                   </tabset>
 
